fixed top page padding gap

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,18 +15,21 @@ body {
 a:link {
   text-decoration: none;
 }
+
 a:visited {
   text-decoration: none;
 }
+
 a:hover {
   text-decoration: none;
 }
+
 a:active {
   text-decoration: none;
 }
 
 main {
-  padding-top: 63px;
+  padding-top: 55px;
   min-height: 100vh;
 }
 
